--- a/Kernel/Tests/CS/SharpOS.Kernel.Tests.CS.csproj
+++ b/Kernel/Tests/CS/SharpOS.Kernel.Tests.CS.csproj
@@ -61,7 +61,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="*.cs" />
+    <Compile Include="Arguments.cs" />
+    <Compile Include="Arithmetic.cs" />
+    <Compile Include="Array.cs" />
+    <Compile Include="BitwiseOperators.cs" />
+    <Compile Include="Boolean.cs" />
+    <Compile Include="BooleanOrderOfOperations.cs" />
+    <Compile Include="Boxing.cs" />
+    <Compile Include="ByteString.cs" />
+    <Compile Include="Object.cs" />
+    <Compile Include="Enum.cs" />
+    <Compile Include="Misc.cs" />
+    <Compile Include="MixedIntegerCast.cs" />
+    <Compile Include="MixedIntegerPointerCast.cs" />
+    <Compile Include="OrderOfOperations.cs" />
+    <Compile Include="PointerCast.cs" />
+    <Compile Include="SignedIntegerCast.cs" />
+    <Compile Include="StaticConstructor.cs" />
+    <Compile Include="String.cs" />
+    <Compile Include="Struct.cs" />
+    <Compile Include="Switch.cs" />
+    <Compile Include="UnsignedIntegerCast.cs" />
+    <Compile Include="WhileLoop.cs" />
+    <Compile Include="X86.cs" />
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
