--- a/Kernel/Core/SharpOS.Kernel.Core.csproj
+++ b/Kernel/Core/SharpOS.Kernel.Core.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{1BDA3EE0-BC5F-4C4A-986C-31730A8EFADC}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -161,6 +161,7 @@
     <Compile Include="Shell\Commands\BuiltIn\LS.cs" />
     <Compile Include="Shell\Commands\BuiltIn\LsPci.cs" />
     <Compile Include="Shell\Commands\BuiltIn\MemDump.cs" />
+    <Compile Include="Shell\Commands\BuiltIn\MemView.cs" />
     <Compile Include="Shell\Commands\BuiltIn\Panic.cs" />
     <Compile Include="Shell\Commands\BuiltIn\Reboot.cs" />
     <Compile Include="Shell\Commands\BuiltIn\Show.cs" />
