--- a/Kernel/Core/SharpOS.Kernel.Core.csproj
+++ b/Kernel/Core/SharpOS.Kernel.Core.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.50727</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{1BDA3EE0-BC5F-4C4A-986C-31730A8EFADC}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -141,11 +141,20 @@
     <Compile Include="KeyMap.cs" />
     <Compile Include="Korlib\Runtime\TypeInfo.cs" />
     <Compile Include="Korlib\Runtime\VTable.cs" />
+    <Compile Include="Korlib\System\Array.cs" />
+    <Compile Include="Korlib\System\Boolean.cs" />
+    <Compile Include="Korlib\System\Byte.cs" />
+    <Compile Include="Korlib\System\Char.cs" />
     <Compile Include="Korlib\System\Enum.cs" />
     <Compile Include="Korlib\System\Int16.cs" />
     <Compile Include="Korlib\System\Int32.cs" />
+    <Compile Include="Korlib\System\Int64.cs" />
     <Compile Include="Korlib\System\Object.cs" />
+    <Compile Include="Korlib\System\SByte.cs" />
     <Compile Include="Korlib\System\String.cs" />
+    <Compile Include="Korlib\System\UInt16.cs" />
+    <Compile Include="Korlib\System\UInt32.cs" />
+    <Compile Include="Korlib\System\UInt64.cs" />
     <Compile Include="Korlib\System\ValueType.cs" />
     <Compile Include="Multiboot.cs" />
     <Compile Include="PageAllocator.cs" />
