FloppyDiskController is no longer stuck in an infinite loop on bochs, but still doesn't work.. Ext2FS no longer crashes the system, but just generates an error.. going to investigate why the FloppyDiskController doesn't load data

--- a/Kernel/Core/SharpOS.Kernel.Core.csproj
+++ b/Kernel/Core/SharpOS.Kernel.Core.csproj
@@ -106,6 +106,7 @@
     <Compile Include="ADC\X86\IDT.cs" />
     <Compile Include="ADC\X86\Interlocked.cs" />
     <Compile Include="ADC\X86\IO.cs" />
+    <Compile Include="ADC\X86\IOManager.cs" />
     <Compile Include="ADC\X86\Keyboard.cs" />
     <Compile Include="ADC\X86\MemoryUtil.cs" />
     <Compile Include="ADC\X86\Pager.cs" />
