--- a/Kernel/Core/SharpOS.Kernel.Core.csproj
+++ b/Kernel/Core/SharpOS.Kernel.Core.csproj
@@ -100,6 +100,7 @@
     <Compile Include="ADC\X86\Barrier.cs" />
     <Compile Include="ADC\X86\BootControl.cs" />
     <Compile Include="ADC\X86\CMOS.cs" />
+    <Compile Include="ADC\X86\DMA.cs" />
     <Compile Include="ADC\X86\DTPointer.cs" />
     <Compile Include="ADC\X86\FloppyDiskController.cs" />
     <Compile Include="ADC\X86\GDT.cs" />
