Added support for multidimensional Arrays. This commit is dedicated to Donno. :D

--- a/AOT/Core/SharpOS.AOT.Core.csproj
+++ b/AOT/Core/SharpOS.AOT.Core.csproj
@@ -86,9 +86,9 @@
     <Compile Include="Attributes\ADCInterfaceAttribute.cs" />
     <Compile Include="Attributes\ADCLayerAttribute.cs" />
     <Compile Include="Attributes\ADCStubAttribute.cs" />
+    <Compile Include="Attributes\AllocArrayAttribute.cs" />
     <Compile Include="Attributes\AllocAttribute.cs" />
     <Compile Include="Attributes\AllocObjectAttribute.cs" />
-    <Compile Include="Attributes\AllocSZArrayAttribute.cs" />
     <Compile Include="Attributes\TypeInfoAttribute.cs" />
     <Compile Include="Attributes\KernelMainAttribute.cs" />
     <Compile Include="Attributes\LabelAddressAttribute.cs" />
