--- a/Kernel/Core/SharpOS.Kernel.Core.csproj
+++ b/Kernel/Core/SharpOS.Kernel.Core.csproj
@@ -109,6 +109,7 @@
     <Compile Include="ADC\X86\IO.cs" />
     <Compile Include="ADC\X86\IOManager.cs" />
     <Compile Include="ADC\X86\Keyboard.cs" />
+    <Compile Include="ADC\X86\LPC.cs" />
     <Compile Include="ADC\X86\MemoryUtil.cs" />
     <Compile Include="ADC\X86\Pager.cs" />
     <Compile Include="ADC\X86\PCI.cs" />
