Updated the VS files, removed the files KernelTestsWrapper.cs and SharpOS.Kernel.Test.NUnit.cs from the repository but they are still part of the project as they are autogenerated, and added some code related to exception handling.

--- a/AOT/Core/SharpOS.AOT.Core.csproj
+++ b/AOT/Core/SharpOS.AOT.Core.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Attributes\AllocAttribute.cs" />
     <Compile Include="Attributes\AllocObjectAttribute.cs" />
     <Compile Include="Attributes\AddressOfAttribute.cs" />
+    <Compile Include="Attributes\ITableAttribute.cs" />
     <Compile Include="Attributes\NakedAttribute.cs" />
     <Compile Include="Attributes\IncludeAttribute.cs" />
     <Compile Include="Attributes\TypeInfoAttribute.cs" />
