--- a/Kernel/Core/SharpOS.Kernel.Core.csproj
+++ b/Kernel/Core/SharpOS.Kernel.Core.csproj
@@ -79,7 +79,12 @@
     <Compile Include="ADC\Architecture.cs" />
     <Compile Include="ADC\Barrier.cs" />
     <Compile Include="ADC\BootControl.cs" />
+    <Compile Include="ADC\DriverManager.cs" />
+    <Compile Include="ADC\IDeviceManager.cs" />
     <Compile Include="ADC\FloppyDiskController.cs" />
+    <Compile Include="ADC\IDevice.cs" />
+    <Compile Include="ADC\IDriver.cs" />
+    <Compile Include="ADC\IHardwareResourceManager.cs" />
     <Compile Include="ADC\Interlocked.cs" />
     <Compile Include="ADC\IProcessor.cs" />
     <Compile Include="ADC\Keyboard.cs" />
@@ -100,16 +105,19 @@
     <Compile Include="ADC\X86\Barrier.cs" />
     <Compile Include="ADC\X86\BootControl.cs" />
     <Compile Include="ADC\X86\CMOS.cs" />
+    <Compile Include="ADC\X86\HardwareResourceManager.cs" />
+    <Compile Include="ADC\X86\PCIDriver.cs" />
+    <Compile Include="ADC\X86\DeviceManager.cs" />
     <Compile Include="ADC\X86\DMA.cs" />
     <Compile Include="ADC\X86\DTPointer.cs" />
     <Compile Include="ADC\X86\FloppyDiskController.cs" />
     <Compile Include="ADC\X86\GDT.cs" />
+    <Compile Include="ADC\X86\GenericDevice.cs" />
     <Compile Include="ADC\X86\IDT.cs" />
     <Compile Include="ADC\X86\Interlocked.cs" />
     <Compile Include="ADC\X86\IO.cs" />
-    <Compile Include="ADC\X86\IOManager.cs" />
     <Compile Include="ADC\X86\Keyboard.cs" />
-    <Compile Include="ADC\X86\LPC.cs" />
+    <Compile Include="ADC\X86\LPCDriver.cs" />
     <Compile Include="ADC\X86\MemoryUtil.cs" />
     <Compile Include="ADC\X86\Pager.cs" />
     <Compile Include="ADC\X86\PCI.cs" />
