--- a/Tools/DiskImageUpdater/DiskImageUpdater.csproj
+++ b/Tools/DiskImageUpdater/DiskImageUpdater.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.50727</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{6A1D2DCC-41E8-11DC-8314-0800200C9A66}</ProjectGuid>
     <OutputType>Exe</OutputType>
@@ -53,6 +53,8 @@
       <HintPath>..\..\References\Mono.GetOptions.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="*.cs" />
