--- a/Kernel/Core/SharpOS.Kernel.Core.csproj
+++ b/Kernel/Core/SharpOS.Kernel.Core.csproj
@@ -81,6 +81,7 @@
     <Compile Include="ADC\Architecture.cs" />
     <Compile Include="ADC\Barrier.cs" />
     <Compile Include="ADC\BootControl.cs" />
+    <Compile Include="ADC\ExceptionHandling.cs" />
     <Compile Include="ADC\DriverManager.cs" />
     <Compile Include="ADC\IDeviceManager.cs" />
     <Compile Include="ADC\FloppyDiskController.cs" />
@@ -108,6 +109,7 @@
     <Compile Include="ADC\X86\Barrier.cs" />
     <Compile Include="ADC\X86\BootControl.cs" />
     <Compile Include="ADC\X86\CMOS.cs" />
+    <Compile Include="ADC\X86\ExceptionHandling.cs" />
     <Compile Include="ADC\X86\HardwareResourceManager.cs" />
     <Compile Include="ADC\X86\LPCBusDriver.cs" />
     <Compile Include="ADC\X86\PCIBusDriver.cs" />
