Updating the VS project files and adding more exception handling code. Next commit will have most probably partial working exceptions.

--- a/AOT/Core/SharpOS.AOT.Core.csproj
+++ b/AOT/Core/SharpOS.AOT.Core.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Attributes\AllocAttribute.cs" />
     <Compile Include="Attributes\AllocObjectAttribute.cs" />
     <Compile Include="Attributes\AddressOfAttribute.cs" />
+    <Compile Include="Attributes\IsInstAttribute.cs" />
     <Compile Include="Attributes\ThrowAttribute.cs" />
     <Compile Include="Attributes\ExceptionHandlingClauseAttribute.cs" />
     <Compile Include="Attributes\MethodBoundaryAttribute.cs" />
