Support for overflowing I8 -> I conversion (with runtime support for the exceptions), support for reading a field signature from the blob heap in metadata.

--- a/AOT/Core/SharpOS.AOT.Core.csproj
+++ b/AOT/Core/SharpOS.AOT.Core.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Attributes\StringAttribute.cs" />
     <Compile Include="Attributes\TargetNamespaceAttribute.cs" />
     <Compile Include="Attributes\VTableAttribute.cs" />
+    <Compile Include="Attributes\OverflowAttribute.cs" />
     <Compile Include="COFF.cs" />
     <Compile Include="IR\Block.cs" />
     <Compile Include="IR\Class.cs" />
