--- a/Kernel/Core/SharpOS.Kernel.Core.csproj
+++ b/Kernel/Core/SharpOS.Kernel.Core.csproj
@@ -173,11 +173,18 @@
     <Compile Include="Korlib\Runtime\TokenType.cs" />
     <Compile Include="Korlib\Runtime\TypeInfo.cs" />
     <Compile Include="Korlib\Runtime\VTable.cs" />
+    <Compile Include="Korlib\Runtime\Metadata.cs" />
+    <Compile Include="Korlib\Runtime\FieldMetadata.cs" />
+    <Compile Include="Korlib\Runtime\TypeMetadata.cs" />
+    <Compile Include="Korlib\Runtime\MetadataSignatures.cs" />
     <Compile Include="Korlib\System\Array.cs" />
     <Compile Include="Korlib\System\Boolean.cs" />
     <Compile Include="Korlib\System\Byte.cs" />
     <Compile Include="Korlib\System\Char.cs" />
     <Compile Include="Korlib\System\Exception.cs" />
+    <Compile Include="Korlib\System\SystemException.cs" />
+    <Compile Include="Korlib\System\ArithmeticException.cs" />
+    <Compile Include="Korlib\System\OverflowException.cs" />
     <Compile Include="Korlib\System\Enum.cs" />
     <Compile Include="Korlib\System\Int16.cs" />
     <Compile Include="Korlib\System\Int32.cs" />
