--- a/Kernel/Tests/IL/SharpOS.Kernel.Tests.IL.csproj
+++ b/Kernel/Tests/IL/SharpOS.Kernel.Tests.IL.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Target Name="Build">
-    <Exec Command="$(TargetDir)\KernelTestsWrapperGen.exe -c %windir%\microsoft.net\framework\v2.0.50727\ilasm.exe" />
+    <Exec Command="..\..\..\build\KernelTestsWrapperGen.exe -c %windir%\microsoft.net\framework\v2.0.50727\ilasm.exe" />
   </Target>
   <Target Name="Clean">
     <Delete Files="..\..\..\build\SharpOS.Kernel.Tests.IL.dll;..\..\..\build\SharpOS.Kernel.Tests.IL.pdb" />
